Fix whitespace & Update year

--- a/src/Post.css
+++ b/src/Post.css
@@ -20,6 +20,7 @@
   font-style: italic;
   color: dimgrey;
   font-size: 14px;
+  padding: 1px;
 }
 
 .Overlay {
@@ -55,9 +56,9 @@
 }
 
 .Panel {
+  width: 100%;
   height: 40px;
   display: flex;
-  white-space: nowrap;
 }
 
 .Panel-text {
